--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     },
     "require-dev": {
         "illuminate/support": "~4",
+        "illuminate/config": "~4.0",
+        "illuminate/routing": "~4.0",
     	"phpspec/phpspec": "~2.0"
     },
     "require-all": true,
